--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <input type="radio" name="option" value="3" id="option">Gwang-Ju
                 <br>
             </form>
-            <button id="result-btn">Show result</button>
+            <button id="result-btn">Next Question</button>
             <div class="question-number" id="questionNum">Question 10 of 10</div>
         </div>
     </section>
